--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_text">Escolhe a tua equipa</string>
     <string name="operand_1_and_result">Operando 1, (e Resultado)</string>
     <string name="operand_2">Operando 2</string>
+    <string name="escolhe_um_pokemon">Escolhe um Pokemon</string>
 </resources>
